<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Vương Ebook</string>
    <string name="version">Version 6.9.69.96</string>
    <string name="copyright">Copyright Trần Tùng Vương</string>
    <string name="email">trantungvuong@gmail.com</string>
    <string name="books_list">Danh sách</string>
    <string name="bookmark">Bookmark</string>
    <string name="about">Thông tin</string>
    <string name="fb_author">http://facebook.com/trantungvuong1</string>
    <string name="img_no">Không tìm thấy bookmark</string>
    <string name="menu_share">Share</string>
    <string name="menu_next">Trang tiếp</string>
    <string name="menu_fav">Ưa thích</string>
    <string name="menu_back">Trang cũ</string>
    <string name="fb">Facebook</string>
    <string name="rate">Đánh giá</string>
    <string name="menu_search">Tìm</string>
    <string name="content_visibility">@string/content_off</string>
    <string name="content_off">2</string>
    <string name="drawer_open">Mở Menu</string>
    <string name="drawer_close">Đóng menu</string>

</resources>